- Ability to retrieve bookings by user - Refactor date and time handlers
